# Chat-bot-telegram

./: .gitignore  LICENSE  Makefile  README.md  config.py  dev.env  docker-compose.yml  pyproject.toml
bot/: config.py  frame_bisect.py  rocket_launch_bot.py
docker/: .dockerignore  Dockerfile
tests/: test_rocket_launch_bot.py  tests_rocket_launch_bot.py
