[tool.poetry]
name = "chat-bot-test"
version = "0.1.0"
description = "chat bot de prueba para With"
authors = ["Nicola Gernone <nicola.gernone02@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "13.7"
python-decouple = "^3.8"
black = "^24.8.0"
requests = "^2.32.3"
urllib3 = "1.26.16"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
