[tool.poetry]
name = "chat-bot-test"
version = "0.1.0"
description = "chat bot de prueba para With"
authors = ["Nicola Gernone <nicola.gernone02@gmail.com>"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^20.4"
python-decouple = "^3.8"
black = "^24.8.0"
requests = "^2.32.3"
urllib3 = "^2.2.3"
pytest = "^8.3.3"
flake8 = "^7.1.1"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
